--- a/app/assets/stylesheets/slick.css.scss
+++ b/app/assets/stylesheets/slick.css.scss
@@ -1,20 +1,23 @@
 /* Slider */
 
-.slick-slider { position: relative; display: block; margin-bottom: 30px; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: none; touch-action: none;}
-.slick-list { overflow: hidden; display: block; margin: 0px; padding: 0px; }
+.slick-slider { position: relative; display: block; box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: none; touch-action: none;}
+.slick-list:focus { outline: none; }
+.slick-list { position: relative; overflow: hidden; display: block; margin: 0px; padding: 0px; }
+.slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img { -webkit-transform: translate3d(0,0,0); -moz-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0);}
 .slick-track { position: relative; left: 0px; top: 0px; display: table;}
 .slick-track:after { content: ""; display: table; clear: both; }
 .slick-slide { float: left; height: 100%; min-height: 1px; }
 .slick-slide img { display: block; }
 .slick-slide { display: none; }
+.slick-list.dragging img { pointer-events: none; }
 .slick-initialized .slick-slide { display: table-cell; }
 
 /* Loading States */
 
 .slick-loading .slick-track { visibility: hidden; }
-.slick-loading .slick-list { background: #fff url(../img/ajax-loader.gif) center center no-repeat; }
+.slick-loading .slick-list { background: #fff image-url("ajax-loader.gif") center center no-repeat; }
 .slick-loading .slick-slide { visibility: hidden; }
-.slick-slide.loading { background:  url(../img/ajax-loader.gif) center center no-repeat; position: relative;}
+.slick-slide.loading { background:  image-url("ajax-loader.gif") center center no-repeat; position: relative;}
 
 /* Icons */
 
@@ -22,14 +25,19 @@
 
 @font-face {
   font-family: "slick";
-  src:url("../fonts/slick.eot");
-  src:url("../fonts/slick.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/slick.woff") format("woff"),
-    url("../fonts/slick.ttf") format("truetype"),
-    url("../fonts/slick.svg#slick") format("svg");
+  src:font-url("slick.eot");
+  src:font-url("slick.eot?#iefix") format("embedded-opentype"),
+    font-url("slick.woff") format("woff"),
+    font-url("slick.ttf") format("truetype"),
+    font-url("slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal;
 }
+
+/* Vertical */
+
+.slick-vertical .slide-track { display: block; }
+.slick-vertical .slick-slide { display: block; height: auto; border: 1px solid transparent; }
 
 /* Arrows */
 
@@ -44,7 +52,8 @@
 
 /* Dots */
 
-.slick-dots { position: absolute; bottom: -35px; list-style: none; display: block; text-align: center; padding: 0px; width: 100%;}
+.slick-slider { margin-bottom: 30px; }
+.slick-dots { position: absolute; bottom: -45px; list-style: none; display: block; text-align: center; padding: 0px; width: 100%;}
 .slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0px 5px; padding: 0px; }
 .slick-dots li a { display: block; height: 20px; width: 20px; outline: none; line-height: 0; font-size: 0; color: transparent; padding: 5px; }
 .slick-dots li a:before { content: '\8226'; font-family: "slick"; font-size: 6px; line-height: 2; color: black; opacity: 0.25; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
