--- a/app/assets/stylesheets/slick.css.scss
+++ b/app/assets/stylesheets/slick.css.scss
@@ -27,7 +27,7 @@
     }
 
     .slick-loading & {
-        background: #fff url(./ajax-loader.gif) center center no-repeat;
+        background: #fff image-url("ajax-loader.gif") center center no-repeat;
     }
 
     &.dragging {
@@ -73,7 +73,7 @@
     img {
         display: block;
         &.slick-loading {
-            background: white url(./ajax-loader.gif) center center no-repeat;
+            background: white image-url("ajax-loader.gif") center center no-repeat;
             padding-bottom: 100%;
         }
     }
@@ -104,8 +104,8 @@
  @charset"UTF-8";
  @font-face {
     font-family:"slick";
-    src:url("./fonts/slick.eot");
-    src:url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+    src:font-url("slick.eot");
+    src:font-url("slick.eot?#iefix") format("embedded-opentype"), font-url("slick.woff") format("woff"), font-url("slick.ttf") format("truetype"), font-url("slick.svg#slick") format("svg");
     font-weight: normal;
     font-style: normal;
 }
