--- a/app/assets/stylesheets/slick.css.scss
+++ b/app/assets/stylesheets/slick.css.scss
@@ -27,7 +27,7 @@
     }
 
     .slick-loading & {
-        background: #fff image-url("ajax-loader.gif") center center no-repeat;
+        background: #fff url(./ajax-loader.gif) center center no-repeat;
     }
 
     &.dragging {
@@ -73,7 +73,7 @@
     img {
         display: block;
         &.slick-loading {
-            background: white image-url("ajax-loader.gif") center center no-repeat;
+            background: white url(./ajax-loader.gif) center center no-repeat;
             padding-bottom: 100%;
         }
     }
@@ -104,8 +104,8 @@
  @charset"UTF-8";
  @font-face {
     font-family:"slick";
-    src:font-url("slick.eot");
-    src:font-url("slick.eot?#iefix") format("embedded-opentype"), font-url("slick.woff") format("woff"), font-url("slick.ttf") format("truetype"), font-url("slick.svg#slick") format("svg");
+    src:url("./fonts/slick.eot");
+    src:url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -127,6 +127,7 @@
     margin-top: -10px;
     padding: 0;
     border: none;
+    outline: none;
     &:focus {
         outline: none;
     }
@@ -177,8 +178,11 @@
         width: 20px;
         margin: 0px 5px;
         padding: 0px;
+        cursor: pointer;
 
-        a {
+        button {
+            border: 0;
+            background: transparent;
             display: block;
             height: 20px;
             width: 20px;
@@ -187,20 +191,32 @@
             font-size: 0;
             color: transparent;
             padding: 5px;
+            cursor: pointer;
+            outline: none;
+            &:focus {
+                outline: none;
+            }
 
             &:before {
+                position: absolute;
+                top: 0;
+                left: 0;
                 content:'\8226';
+                width: 20px;
+                height: 20px;
                 font-family:"slick";
                 font-size: 6px;
-                line-height: 2;
+                line-height: 20px;
+                text-align: center;
                 color: black;
                 opacity: 0.25;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
             }
+
         }
 
-        &.slick-active a:before {
+        &.slick-active button:before {
             opacity: 0.75;
         }
     }
