--- a/app/assets/stylesheets/slick.css.scss
+++ b/app/assets/stylesheets/slick.css.scss
@@ -104,8 +104,11 @@
  @charset"UTF-8";
  @font-face {
     font-family:"slick";
-    src:url("./fonts/slick.eot");
-    src:url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+    src: asset-url("slick.eot");
+    src: asset-url("slick.eot?#iefix") format("embedded-opentype"),
+     asset-url("slick.woff") format("woff"),
+      asset-url("slick.ttf") format("truetype"), 
+      asset-url("slick.svg#slick") format("svg");
     font-weight: normal;
     font-style: normal;
 }
