--- a/app/assets/stylesheets/slick.css.scss
+++ b/app/assets/stylesheets/slick.css.scss
@@ -2,14 +2,32 @@
 
 // Default Variables
 
-//$slick-font-path: "./fonts/" !default;
-//$slick-loader-path: "./" !default;
+$slick-font-path: "./fonts/" !default;
+$slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-prev-character: '\2190' !default;
 $slick-next-character: '\2192' !default;
 $slick-dot-character: '\2022' !default;
 
+
+@function slick-image-url($url) {
+  @if function-exists(image-url) {
+    @return image-url($url);
+  }
+  @else  {  
+    @return url($slick-loader-path + $url);  
+  }  
+}
+
+@function slick-font-url($url) {
+  @if function-exists(font-url) {
+    @return imag-url($url);
+  }
+  @else  {  
+    @return url($slick-font-path + $url);  
+  }  
+}
 
 /* Slider */
 
@@ -40,7 +58,7 @@ $slick-dot-character: '\2022' !default;
     }
 
     .slick-loading & {
-        background: #fff image-url("ajax-loader.gif") center center no-repeat;
+        background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
     }
 
     &.dragging {
@@ -115,11 +133,11 @@ $slick-dot-character: '\2022' !default;
 
 @font-face {
     font-family:"slick";
-    src:    font-url("slick.eot");
-    src:    font-url("slick.eot?#iefix") format("embedded-opentype"),
-            font-url("slick.woff") format("woff"),
-            font-url("slick.ttf") format("truetype"),
-            font-url("slick.svg#slick") format("svg");
+    src:    slick-font-url("slick.eot");
+    src:    slick-font-url("slick.eot?#iefix") format("embedded-opentype"),
+            slick-font-url("slick.woff") format("woff"),
+            slick-font-url("slick.ttf") format("truetype"),
+            slick-font-url("slick.svg#slick") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -200,15 +218,14 @@ $slick-dot-character: '\2022' !default;
             display: block;
             height: 20px;
             width: 20px;
-            outline: none;
+            outline: 0;
             line-height: 0;
             font-size: 0;
             color: transparent;
             padding: 5px;
             cursor: pointer;
-            outline: none;
             &:focus {
-                outline: none;
+                outline: 0;
             }
 
             &:before {
